--- a/profile/main/page.html
+++ b/profile/main/page.html
@@ -28,5 +28,6 @@
             .bindPopup("Centro di Trieste")
             .openPopup();
     </script>
+    <script src=script.js></script>    
 </body>
 </html>
