integrazione grafica per le fermate (non funzionante)

--- a/profile/main/page.html
+++ b/profile/main/page.html
@@ -22,12 +22,8 @@
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; OpenStreetMap contributors'
         }).addTo(map);
-
-        // Aggiunge un marker di esempio
-        L.marker([45.6495, 13.7768]).addTo(map)
-            .bindPopup("Centro di Trieste")
-            .openPopup();
     </script>
-    <script src=script.js></script>    
+    <!-- <script src=script.js></script> -->
+    <script src=route.js></script>
 </body>
 </html>
