--- a/profile/main/page.html
+++ b/profile/main/page.html
@@ -23,7 +23,7 @@
             attribution: '&copy; OpenStreetMap contributors'
         }).addTo(map);
     </script>
-    <!-- <script src=script.js></script> -->
+    <!-- <script src=bustop.js></script> -->
     <script src=route.js></script>
 </body>
 </html>
