clik su 17 funzionante per mostrare fermate(per ora parzialmente inserite)

--- a/profile/main/page.html
+++ b/profile/main/page.html
@@ -24,6 +24,7 @@
         }).addTo(map);
     </script>
     <!-- <script src=bustop.js></script> -->
-    <script src=route.js></script>
+    <script src=17.js></script>
+    <script src=17b.js></script>
 </body>
 </html>
