--- a/profile/main/index.html
+++ b/profile/main/index.html
@@ -7,6 +7,34 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="style.css" /> <!-- Collegamento al CSS esterno -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        .info-popup {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: white;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 1000;
+            width: 350px;
+            text-align: center;
+        }
+        .info-popup.hidden {
+            display: none;
+        }
+        .info-popup .close-btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: none;
+            border: none;
+            font-size: 16px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
     <!-- Barra superiore con titolo centrato e bottoni a destra -->
@@ -25,6 +53,7 @@
         <button onclick="showMap()">🗺️ <span class="nav-text">Mappa</span></button>
         <button onclick="showBusList()">🚌 <span class="nav-text">Lista Autobus</span></button>
         <button onclick="findStop()">📍 <span class="nav-text">Trova Fermata</span></button>
+        <button onclick="showDeviceLocation()">📍 <span class="nav-text">La Mia Posizione</span></button>
     </div>
 
     <!-- Finestra con la lista degli autobus -->
@@ -39,6 +68,12 @@
         </ul>
     </div>
 
+    <div id="info-popup" class="info-popup hidden">
+        <button onclick="closeInfo()" class="close-btn">❌</button>
+        <p>Bragatto Davide - js designer</p>
+        <p>Bubich Mattiahs - graphic designer</p>
+    </div>
+
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="mapConfig.js"></script>
     <script src="17.js"></script>
@@ -50,6 +85,38 @@
 
         function closeBusList() {
             document.getElementById('bus-list').style.transform = 'translateY(100%)';
+        }
+
+        function showInfo() {
+            document.getElementById('info-popup').classList.remove('hidden');
+        }
+
+        function closeInfo() {
+            document.getElementById('info-popup').classList.add('hidden');
+        }
+
+        //funzione per la geolocalizzazione
+        function showDeviceLocation() {
+            if (!navigator.geolocation) {
+                alert("La geolocalizzazione non è supportata dal tuo browser.");
+                return;
+            }
+
+            navigator.geolocation.getCurrentPosition(
+                (position) => {
+                    const { latitude, longitude } = position.coords;
+
+                    // Aggiungi un marker sulla mappa
+                    const marker = L.marker([latitude, longitude]).addTo(map);
+                    marker.bindPopup("Sei qui!").openPopup();
+
+                    // Centra la mappa sulla posizione
+                    map.setView([latitude, longitude], 15);
+                },
+                (error) => {
+                    alert("Impossibile ottenere la posizione: " + error.message);
+                }
+            );
         }
     </script>
 
