linea 17 e 17b funzionanti con relative fermate

--- a/profile/main/index.html
+++ b/profile/main/index.html
@@ -77,6 +77,8 @@
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="mapConfig.js"></script>
     <script src="17.js"></script>
+    <script src="17b.js"></script>
+
 
     <script>
         function showBusList() {
