aggiunta linee 6,9, 17/ funzionanti (la 17 non funziona), update readme

--- a/profile/main/index.html
+++ b/profile/main/index.html
@@ -62,8 +62,11 @@
         <h2>Lista Autobus</h2>
         <ul id="bus-list-content">
             <!-- Gli autobus verranno popolati dinamicamente -->
+            <li>Linea 6</li>
+            <li>Linea 9</li>
             <li>Linea 17</li>
             <li>Linea 17/</li>
+            <li>Linea 36</li>
             <li>ciao</li>
         </ul>
     </div>
@@ -74,10 +77,14 @@
         <p>Bubich Mattiahs - graphic designer</p>
     </div>
 
+    <!--questa è la sezione inlcusione script delle linee-->
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="mapConfig.js"></script>
     <script src="17.js"></script>
     <script src="17b.js"></script>
+    <script src="6.js"></script>
+    <script src="9.js"></script>
+
 
 
     <script>
