--- a/profile/main/index.html
+++ b/profile/main/index.html
@@ -62,11 +62,60 @@
         <h2>Lista Autobus</h2>
         <ul id="bus-list-content">
             <!-- Gli autobus verranno popolati dinamicamente -->
+            <li>Linea 1</li>
+            <li>Linea 2</li>
+            <li>Linea 2/</li>
+            <li>Linea 3</li>
+            <li>Linea 4</li>
+            <li>Linea 5</li>
             <li>Linea 6</li>
+            <li>Linea 7</li>
+            <li>Linea 8</li>
             <li>Linea 9</li>
-            <li>Linea 17</li>
+            <li>Linea 10</li>
+            <li>Linea 11</li>
+            <li>Linea 12</li>
+            <li>Linea 13</li>
+            <li>Linea 14</li>
+            <li>Linea 15</li>
             <li>Linea 17/</li>
+            <li>Linea 17</li>
+            <li>Linea 18</li>
+            <li>Linea 19/</li>
+            <li>Linea 19</li>
+            <li>Linea 20</li>
+            <li>Linea 21</li>
+            <li>Linea 22</li>
+            <li>Linea 23</li>
+            <li>Linea 24</li>
+            <li>Linea 25</li>
+            <li>Linea 26/</li>
+            <li>Linea 26</li>
+            <li>Linea 27</li>
+            <li>Linea 28</li>
+            <li>Linea 29</li>
+            <li>Linea 30</li>
+            <li>Linea 31</li>
+            <li>Linea 32</li>
+            <li>Linea 33</li>
+            <li>Linea 34</li>
+            <li>Linea 35</li>
             <li>Linea 36</li>
+            <li>Linea 37</li>
+            <li>Linea 38</li>
+            <li>Linea 39/</li>
+            <li>Linea 40</li>
+            <li>Linea 41</li>
+            <li>Linea 42</li>
+            <li>Linea 43</li>
+            <li>Linea 44</li>
+            <li>Linea 46</li>
+            <li>Linea 47</li>
+            <li>Linea 48</li>
+            <li>Linea 49/</li>
+            <li>Linea 51</li>
+            <li>Linea 52</li>
+            <li>Linea 64</li>
             <li>ciao</li>
         </ul>
     </div>
