--- a/profile/main/index.html
+++ b/profile/main/index.html
@@ -122,7 +122,7 @@
 
     <div id="info-popup" class="info-popup hidden">
         <button onclick="closeInfo()" class="close-btn">❌</button>
-        <p>Bragatto Davide - js designer</p>
+        <p>Bragatto Davide - js programming</p>
         <p>Bubich Mattiahs - graphic designer</p>
     </div>
 
