fix line 36 not showed on map

--- a/profile/main/index.html
+++ b/profile/main/index.html
@@ -78,6 +78,7 @@
     <script src="17b.js"></script>
     <script src="6.js"></script>
     <script src="9.js"></script>
+    <script src="36.js"></script>
 
 
 
